Fix connection strings

--- a/Fb/Fb.Api/Web.config
+++ b/Fb/Fb.Api/Web.config
@@ -4,12 +4,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   
       <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-          <section name="Ads.Web.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+          <section name="Fb.Api.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       </sectionGroup>
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Ads;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <connectionStrings>
+      <add name="FbDatabase" connectionString="data source=.\sqlexpress;initial catalog=FbDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    </connectionStrings>
   <appSettings>
   </appSettings>
   <system.web>
@@ -88,20 +88,16 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<applicationSettings>
-        <Ads.Web.Properties.Settings>
-            <setting name="DefaultPageSize" serializeAs="String">
-                <value>10</value>
-            </setting>
-        </Ads.Web.Properties.Settings>
-    </applicationSettings>
+  <applicationSettings>
+      <Fb.Api.Properties.Settings>
+          <setting name="DefaultPageSize" serializeAs="String">
+              <value>10</value>
+          </setting>
+      </Fb.Api.Properties.Settings>
+  </applicationSettings>
 </configuration>
