--- a/Fb/Fb.Models/Fb.Models.csproj
+++ b/Fb/Fb.Models/Fb.Models.csproj
@@ -50,11 +50,11 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdvertisementStatus.cs" />
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="Comment.cs" />
     <Compile Include="Town.cs" />
-    <Compile Include="Advertisement.cs" />
+    <Compile Include="Post.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
