--- a/Fb/Fb.Api/Fb.Api.csproj
+++ b/Fb/Fb.Api/Fb.Api.csproj
@@ -196,8 +196,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
     <Compile Include="Controllers\AdsController.cs" />
-    <Compile Include="Controllers\CategoriesController.cs" />
-    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\FriendsController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Models\Admin\AdminTownBindingModel.cs" />
     <Compile Include="Models\Admin\AdminGetTownsBindingModel.cs" />
@@ -207,6 +206,7 @@
     <Compile Include="Models\Admin\AdminCategoryBindingModel.cs" />
     <Compile Include="Models\Admin\AdminEditAdBindingModel.cs" />
     <Compile Include="Models\Admin\AdminEditUserBindingModel.cs" />
+    <Compile Include="Models\Friends\FindFriendByStringModel.cs" />
     <Compile Include="Models\Users\LoginUserBindingModel.cs" />
     <Compile Include="Models\Users\UserUpdateAdBindingModel.cs" />
     <Compile Include="Models\Users\UserCreateAdBindingModel.cs" />
