--- a/Fb/Fb.Web/Fb.Web.csproj
+++ b/Fb/Fb.Web/Fb.Web.csproj
@@ -126,6 +126,7 @@
   <ItemGroup>
     <Content Include="App\app.js" />
     <Content Include="App\controllers\editAdController.js" />
+    <Content Include="App\controllers\friendsController.js" />
     <Content Include="App\controllers\homeController.js" />
     <Content Include="App\controllers\loginController.js" />
     <Content Include="App\controllers\publishAdController.js" />
@@ -161,6 +162,7 @@
     <Content Include="App\modals\publishAgainAd\publishAgainAd.html" />
     <Content Include="App\modals\deactivateAd\deactivateAdController.js" />
     <Content Include="App\modals\publishAgainAd\publishAgainAdController.js" />
+    <Content Include="App\services\friendsService.js" />
     <Content Include="App\services\adminAdsService.js" />
     <Content Include="App\services\adminTownService.js" />
     <Content Include="App\services\adminCategoryService.js" />
@@ -188,6 +190,7 @@
     <Content Include="App\templates\login.html" />
     <Content Include="App\templates\publishAd.html" />
     <Content Include="App\templates\register.html" />
+    <Content Include="App\templates\searchFriends.html" />
     <Content Include="App\templates\userAds.html" />
     <Content Include="App\templates\userProfile.html" />
     <Content Include="Content\bootstrap-yeti-theme.css" />
