Host the application in a cloud environment (Azure)

--- a/Fb/Fb.Api/Web.config
+++ b/Fb/Fb.Api/Web.config
@@ -8,7 +8,7 @@
       </sectionGroup>
   </configSections>
     <connectionStrings>
-      <add name="FbDatabase" connectionString="data source=.\sqlexpress;initial catalog=FbDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+      <add name="FbDatabase" connectionString="Server=tcp:ioajkpui9q.database.windows.net,1433;Database=FbDatabase;User ID=BogotaFbApp@ioajkpui9q;Password=6Members;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />
     </connectionStrings>
   <appSettings>
   </appSettings>
