Back connection strings for MSSQL Express

--- a/Fb/Fb.Data/App.config
+++ b/Fb/Fb.Data/App.config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="FbDatabase" connectionString="data source=.;initial catalog=FbDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="FbDatabase" connectionString="data source=.\sqlexpress;initial catalog=FbDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
